issue: horizontal scroll white space

--- a/html/assignment3/css/style.css
+++ b/html/assignment3/css/style.css
@@ -199,7 +199,7 @@
 	display: inline-flex;
 }*/
 .related-preview{
-	padding-top: 50px;
+	padding-top: 56px;
 	padding-bottom: 87px;
 }
 li.related-image img{
